--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -2533,6 +2533,16 @@
         }
       }
     },
+    "Search.type.live" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "直播"
+          }
+        }
+      }
+    },
     "Search.type.user" : {
       "localizations" : {
         "en" : {
@@ -4181,6 +4191,9 @@
         }
       }
     },
+    "于 %@ 开始" : {
+
+    },
     "令枫" : {
 
     },
@@ -4219,7 +4232,16 @@
     "开启屏幕使用时间" : {
 
     },
+    "番剧" : {
+
+    },
+    "直播" : {
+
+    },
     "确认" : {
+
+    },
+    "视频" : {
 
     },
     "视频下载列表" : {
