--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -81,9 +81,6 @@
         }
       }
     },
-    "“屏幕使用时间”会记录您每天使用喵哩喵哩的时间并作出统计" : {
-
-    },
     "%@" : {
       "localizations" : {
         "en" : {
@@ -1129,7 +1126,6 @@
       }
     },
     "Download.closing-in-3sec" : {
-      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -2533,16 +2529,6 @@
         }
       }
     },
-    "Search.type.live" : {
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "直播"
-          }
-        }
-      }
-    },
     "Search.type.user" : {
       "localizations" : {
         "en" : {
@@ -3759,6 +3745,86 @@
         }
       }
     },
+    "User.switch" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Switch Account"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "切换账户"
+          }
+        }
+      }
+    },
+    "User.switch.add" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Add Account"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "添加账户"
+          }
+        }
+      }
+    },
+    "User.switch.description" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Swipe right and delete will not log out."
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "右滑删除不会退出登录。"
+          }
+        }
+      }
+    },
+    "User.switch.description.1" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tap to switch account, page will not refresh instantly as the account switches. One tap is enough."
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "轻点以切换账户，账户切换时不会立即在页面中刷新。轻点以此足矣。"
+          }
+        }
+      }
+    },
+    "User.switch.none" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "No Account"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "没有账户"
+          }
+        }
+      }
+    },
     "User.tap-to-login" : {
       "localizations" : {
         "en" : {
@@ -4191,24 +4257,11 @@
         }
       }
     },
-    "于 %@ 开始" : {
-
-    },
     "令枫" : {
 
     },
-    "关闭“屏幕使用时间”" : {
-
-    },
     "原神" : {
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : ""
-          }
-        }
-      }
+
     },
     "在使用本 App 前，您需要先知晓以下信息：\n· 本 App 由第三方开发者以及部分社区用户贡献，与哔哩哔哩无合作关系，哔哩哔哩是上海宽娱数码科技有限公司的商标。\n· 本 App 并不是哔哩哔哩的替代品，我们建议您在能够使用官方客户端时尽量使用官方客户端。\n· 本 App 均使用来源于网络的公开信息进行开发。\n· 本 App 中和B站相关的功能完全免费\n· 本 App 中所呈现的B站内容来自哔哩哔哩官方。\n· 本 App 的开发者、负责人和实际责任人是%@\n  联系QQ：3245146430" : {
       "localizations" : {
@@ -4226,25 +4279,7 @@
         }
       }
     },
-    "将不再记录您的屏幕使用时间, 已记录的数据不会被删除" : {
-
-    },
-    "开启屏幕使用时间" : {
-
-    },
-    "番剧" : {
-
-    },
-    "直播" : {
-
-    },
     "确认" : {
-
-    },
-    "视频" : {
-
-    },
-    "视频下载列表" : {
 
     },
     "神秘代码" : {
