--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -81,6 +81,9 @@
         }
       }
     },
+    "“屏幕使用时间”会记录您每天使用喵哩喵哩的时间并作出统计" : {
+
+    },
     "%@" : {
       "localizations" : {
         "en" : {
@@ -1109,6 +1112,9 @@
         }
       }
     },
+    "Dignite" : {
+
+    },
     "Direct-message.failed" : {
       "localizations" : {
         "en" : {
@@ -1126,6 +1132,7 @@
       }
     },
     "Download.closing-in-3sec" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -2134,6 +2141,7 @@
       }
     },
     "Moments.live" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -2166,6 +2174,7 @@
       }
     },
     "Moments.upload-video" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -2528,6 +2537,9 @@
           }
         }
       }
+    },
+    "Search.type.live" : {
+
     },
     "Search.type.user" : {
       "localizations" : {
@@ -4257,10 +4269,31 @@
         }
       }
     },
+    "于 %@ 开始" : {
+
+    },
     "令枫" : {
 
     },
+    "关闭“屏幕使用时间”" : {
+
+    },
+    "动态内容" : {
+
+    },
+    "动态评论" : {
+
+    },
+    "动态详情" : {
+
+    },
     "原神" : {
+
+    },
+    "发送动态" : {
+
+    },
+    "可选, 最多9个" : {
 
     },
     "在使用本 App 前，您需要先知晓以下信息：\n· 本 App 由第三方开发者以及部分社区用户贡献，与哔哩哔哩无合作关系，哔哩哔哩是上海宽娱数码科技有限公司的商标。\n· 本 App 并不是哔哩哔哩的替代品，我们建议您在能够使用官方客户端时尽量使用官方客户端。\n· 本 App 均使用来源于网络的公开信息进行开发。\n· 本 App 中和B站相关的功能完全免费\n· 本 App 中所呈现的B站内容来自哔哩哔哩官方。\n· 本 App 的开发者、负责人和实际责任人是%@\n  联系QQ：3245146430" : {
@@ -4279,10 +4312,55 @@
         }
       }
     },
+    "将不再记录您的屏幕使用时间, 已记录的数据不会被删除" : {
+
+    },
+    "将作为动态主体" : {
+
+    },
+    "小尾巴内容" : {
+
+    },
+    "已选择的图片" : {
+
+    },
+    "应用" : {
+
+    },
+    "开启屏幕使用时间" : {
+
+    },
+    "您可以更改默认的小尾巴内容, 如果不想添加小尾巴, 请清空上方文本框内容. 您可以随时在设置中更改此内容" : {
+
+    },
+    "番剧" : {
+
+    },
+    "直播" : {
+
+    },
     "确认" : {
 
     },
+    "视频" : {
+
+    },
+    "视频下载列表" : {
+
+    },
     "神秘代码" : {
+
+    },
+    "要使用动态小尾巴吗?" : {
+
+    },
+    "这里空空如也" : {
+
+    },
+    "选择图片" : {
+
+    },
+    "重新载入" : {
 
     }
   },
