--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -65,6 +65,22 @@
         }
       }
     },
+    ":" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : ":"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : ":"
+          }
+        }
+      }
+    },
     ".%lld" : {
       "localizations" : {
         "en" : {
@@ -157,6 +173,23 @@
           "stringUnit" : {
             "state" : "new",
             "value" : "%1$@MB / %2$@MB"
+          }
+        }
+      }
+    },
+    "%lld" : {
+      "extractionState" : "stale",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld"
           }
         }
       }
@@ -257,6 +290,22 @@
         }
       }
     },
+    "About.confirm" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Confirm"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "确认"
+          }
+        }
+      }
+    },
     "About.credits" : {
       "localizations" : {
         "en" : {
@@ -273,6 +322,22 @@
         }
       }
     },
+    "About.genshin" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Genshin"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "原神"
+          }
+        }
+      }
+    },
     "About.meowbili" : {
       "localizations" : {
         "en" : {
@@ -285,6 +350,38 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "喵哩喵哩"
+          }
+        }
+      }
+    },
+    "About.mystery-code" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Mystery Code"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "神秘代码"
+          }
+        }
+      }
+    },
+    "About.mystery-code.error" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Input Error"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "输入错误"
           }
         }
       }
@@ -661,6 +758,22 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "activeBdUrl"
+          }
+        }
+      }
+    },
+    "Bangumi" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Bangumi"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "番剧"
           }
         }
       }
@@ -1109,6 +1222,22 @@
         }
       }
     },
+    "Dignite" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : ""
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Dignite"
+          }
+        }
+      }
+    },
     "Direct-message.failed" : {
       "localizations" : {
         "en" : {
@@ -1121,22 +1250,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "发送失败"
-          }
-        }
-      }
-    },
-    "Download.closing-in-3sec" : {
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Page Auto Closing in 3sec"
-          }
-        },
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "页面将于3秒后自动关闭"
           }
         }
       }
@@ -1265,6 +1378,22 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "下载任务已创建"
+          }
+        }
+      }
+    },
+    "Download.title" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Download"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "视频下载列表"
           }
         }
       }
@@ -1765,6 +1894,22 @@
         }
       }
     },
+    "History.none" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Nothing Here"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "这里空空如也"
+          }
+        }
+      }
+    },
     "Home" : {
       "localizations" : {
         "en" : {
@@ -1937,6 +2082,38 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Linecom"
+          }
+        }
+      }
+    },
+    "Live" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Live"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "直播"
+          }
+        }
+      }
+    },
+    "Live.starting.%@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Started at %@"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "于 %@ 开始"
           }
         }
       }
@@ -2389,6 +2566,22 @@
         }
       }
     },
+    "Screen-time.description" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Screen Time will not be recorded any more and recorded datas will be cleared"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "将不再记录您的屏幕使用时间, 已记录的数据不会被删除"
+          }
+        }
+      }
+    },
     "Screen-time.minutes.%lld" : {
       "localizations" : {
         "en" : {
@@ -2413,6 +2606,54 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "%lld分钟"
+          }
+        }
+      }
+    },
+    "Screen-time.off" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Turn Off Screen Time"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "关闭“屏幕使用时间”"
+          }
+        }
+      }
+    },
+    "Screen-time.on" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Turn One Screen Time"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "开启“屏幕使用时间”"
+          }
+        }
+      }
+    },
+    "Screen-time.usage" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Screen Time will record and count the time you use MeowBili"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "“屏幕使用时间”会记录并统计您每天使用喵哩喵哩的时间"
           }
         }
       }
@@ -2525,6 +2766,22 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "番剧"
+          }
+        }
+      }
+    },
+    "Search.type.live" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Lives"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "直播"
           }
         }
       }
@@ -2785,6 +3042,22 @@
         }
       }
     },
+    "Settings.sleep" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Sleep"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "睡眠"
+          }
+        }
+      }
+    },
     "Settings.update" : {
       "localizations" : {
         "en" : {
@@ -2909,6 +3182,134 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "解压中…"
+          }
+        }
+      }
+    },
+    "Sleep" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Sleep Time"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "睡眠时间"
+          }
+        }
+      }
+    },
+    "Sleep.current.%@.%@.%@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "needs_review",
+            "value" : "It's %1$@:%2$@:%3$@ now"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "现在是%1$@:%2$@:%3$@"
+          }
+        }
+      }
+    },
+    "Sleep.discription" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Sleep Time will notify you too sleep at a specific time"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "“睡眠时间”可以在特定时间内提醒您睡觉"
+          }
+        }
+      }
+    },
+    "Sleep.edit.%@.%@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Edit Sleep Time %1$@:%2$@"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "编辑睡眠时间 %1$@:%2$@"
+          }
+        }
+      }
+    },
+    "Sleep.edit.hour" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "HOUR"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "小时"
+          }
+        }
+      }
+    },
+    "Sleep.edit.minute" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "MINUTE"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "分钟"
+          }
+        }
+      }
+    },
+    "Sleep.edit.title" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Edit Sleep Time"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "编辑睡眠时间"
+          }
+        }
+      }
+    },
+    "Sleep.notification" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Time to Sleep!"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "该睡觉啦！"
           }
         }
       }
@@ -3867,8 +4268,24 @@
         },
         "zh-Hans" : {
           "stringUnit" : {
-            "state" : "new",
+            "state" : "translated",
             "value" : "v%1$@ Build %2$@"
+          }
+        }
+      }
+    },
+    "Video" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Video"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "视频"
           }
         }
       }
@@ -4258,10 +4675,20 @@
       }
     },
     "令枫" : {
-
-    },
-    "原神" : {
-
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "令枫"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "令枫"
+          }
+        }
+      }
     },
     "在使用本 App 前，您需要先知晓以下信息：\n· 本 App 由第三方开发者以及部分社区用户贡献，与哔哩哔哩无合作关系，哔哩哔哩是上海宽娱数码科技有限公司的商标。\n· 本 App 并不是哔哩哔哩的替代品，我们建议您在能够使用官方客户端时尽量使用官方客户端。\n· 本 App 均使用来源于网络的公开信息进行开发。\n· 本 App 中和B站相关的功能完全免费\n· 本 App 中所呈现的B站内容来自哔哩哔哩官方。\n· 本 App 的开发者、负责人和实际责任人是%@\n  联系QQ：3245146430" : {
       "localizations" : {
@@ -4278,12 +4705,6 @@
           }
         }
       }
-    },
-    "确认" : {
-
-    },
-    "神秘代码" : {
-
     }
   },
   "version" : "1.0"
