fix translate errors and fix some Chinese current errors

--- a/DarockBili Watch App/Localizable.xcstrings
+++ b/DarockBili Watch App/Localizable.xcstrings
@@ -249,6 +249,7 @@
             "value" : "关于"
           }
         }
+
       }
     },
     "About-me" : {
@@ -428,7 +429,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "FOLLOWERS"
+            "value" : "FANS"
           }
         },
         "zh-Hans" : {
@@ -508,7 +509,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Last Page"
+            "value" : "Previous"
           }
         },
         "zh-Hans" : {
@@ -524,7 +525,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Next Page"
+            "value" : "Next"
           }
         },
         "zh-Hans" : {
@@ -572,7 +573,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "SUBSCRIBES"
+            "value" : "FOLLOWS"
           }
         },
         "zh-Hans" : {
@@ -922,7 +923,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "在不登陆的情况下反馈…"
+            "value" : "在不登录的情况下反馈…"
           }
         }
       }
@@ -954,7 +955,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "登陆"
+            "value" : "登录"
           }
         }
       }
@@ -970,7 +971,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "登陆Darock通行证"
+            "value" : "使用Darock通行证登录"
           }
         }
       }
@@ -1012,7 +1013,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Two password does not match"
+            "value" : "Password does not match"
           }
         },
         "zh-Hans" : {
@@ -1044,7 +1045,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Successfully Registered"
+            "value" : "Register Succeed"
           }
         },
         "zh-Hans" : {
@@ -1076,7 +1077,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Unable to connect to Darock server"
+            "value" : "Cannot connect to Darock server"
           }
         },
         "zh-Hans" : {
@@ -1141,7 +1142,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Page Auto Closing in 3sec"
+            "value" : "This page will close in 3s"
           }
         },
         "zh-Hans" : {
@@ -1221,7 +1222,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "#%lld Paused"
+            "value" : "#%lld Aborted"
           }
         },
         "zh-Hans" : {
@@ -1253,7 +1254,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Tap to Try Recontinue"
+            "value" : "Tap to Retry"
           }
         },
         "zh-Hans" : {
@@ -1429,7 +1430,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "The error is fatal and Meowbili crashes."
+            "value" : "A fatal error occurred and Meowbili is crashed."
           }
         },
         "zh-Hans" : {
@@ -1557,7 +1558,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "MeowBili Ran into a Problem"
+            "value" : "MeowBili Occurred a Problem"
           }
         },
         "zh-Hans" : {
@@ -1637,7 +1638,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "App crashed in %@."
+            "value" : "App crashed at %@."
           }
         },
         "zh-Hans" : {
@@ -1653,13 +1654,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Continue on Other Devices"
+            "value" : "Continue on iPhone"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "在其他设备上继续"
+            "value" : "在iPhone上继续"
           }
         }
       }
@@ -1845,7 +1846,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Failed to connect to Internet"
+            "value" : "Cannot connect to Internet"
           }
         },
         "zh-Hans" : {
@@ -1947,7 +1948,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Linecom"
+            "value" : "澪空"
           }
         }
       }
@@ -2149,7 +2150,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "start broadcasting"
+            "value" : "started broadcasting"
           }
         },
         "zh-Hans" : {
@@ -2165,7 +2166,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Requires Login"
+            "value" : "Login Required"
           }
         },
         "zh-Hans" : {
@@ -2181,7 +2182,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : " · Uploads Video"
+            "value" : " · Uploaded Video"
           }
         },
         "zh-Hans" : {
@@ -2229,7 +2230,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Switch analysis source when analysis fails"
+            "value" : "Switch analysis source when analysis failed"
           }
         },
         "zh-Hans" : {
@@ -2331,7 +2332,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "当进入详细页时"
+            "value" : "当进入详情页时"
           }
         }
       }
@@ -2347,7 +2348,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "当视频播放时"
+            "value" : "当视频开始播放时"
           }
         }
       }
@@ -2481,7 +2482,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "No Matching Results"
+            "value" : "No Results"
           }
         },
         "zh-Hans" : {
@@ -2545,7 +2546,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Live broadcast"
+            "value" : "Lives"
           }
         },
         "zh-Hans" : {
@@ -2721,7 +2722,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Log Out"
+            "value" : "Sign Out"
           }
         },
         "zh-Hans" : {
@@ -2769,7 +2770,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Are you sure?"
+            "value" : "Are you sure to sign out?"
           }
         },
         "zh-Hans" : {
@@ -2817,13 +2818,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Update"
+            "value" : "Software Update"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "更新"
+            "value" : "软件更新"
           }
         }
       }
@@ -2929,7 +2930,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Unzipping..."
+            "value" : "Uncompressing..."
           }
         },
         "zh-Hans" : {
@@ -2977,7 +2978,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Troubleshooter"
+            "value" : "Troubleshoot"
           }
         },
         "zh-Hans" : {
@@ -2993,13 +2994,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Auto Pop-up"
+            "value" : "Auto Display"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "自动弹出疑难解答"
+            "value" : "自动显示疑难解答"
           }
         }
       }
@@ -3137,7 +3138,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Darock API: Invalid Returns"
+            "value" : "Darock API: Invalid Response"
           }
         },
         "zh-Hans" : {
@@ -3297,7 +3298,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Failed to connect to Bilibili server. The server maybe  crashed."
+            "value" : "Cannot connect to Bilibili server. The bilibili remote server maybe down."
           }
         },
         "zh-Hans" : {
@@ -3313,7 +3314,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Check your internet connection and try later."
+            "value" : "Check your internet connection and try again later."
           }
         },
         "zh-Hans" : {
@@ -3393,7 +3394,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Apple Watch is currently unable to connect to Internet"
+            "value" : "Apple Watch is currently cannot connect to Internet"
           }
         },
         "zh-Hans" : {
@@ -3409,7 +3410,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Try turning off Wifi and Bluetooth in iPhone's Settings"
+            "value" : "Try turn off iPhone's WLAN and Bluetooth"
           }
         },
         "zh-Hans" : {
@@ -3425,7 +3426,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Check if your watch connects to Internet"
+            "value" : "Ensure your Apple Watch is connected to Internet"
           }
         },
         "zh-Hans" : {
@@ -3441,7 +3442,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Please permit Internet access on iPhone"
+            "value" : "Ensure you're granted Internet access to Meowbili"
           }
         },
         "zh-Hans" : {
@@ -3553,7 +3554,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Darock API's Return is Invalid"
+            "value" : "Darock API's Response is Invalid"
           }
         },
         "zh-Hans" : {
@@ -3633,7 +3634,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Checking Update..."
+            "value" : "Checking for Update..."
           }
         },
         "zh-Hans" : {
@@ -3665,7 +3666,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Ran into a Problem while Checking Updates"
+            "value" : "An error occurred when checking for update"
           }
         },
         "zh-Hans" : {
@@ -3761,7 +3762,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Subscribes"
+            "value" : "Follows"
           }
         },
         "zh-Hans" : {
@@ -3783,7 +3784,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "轻点以登陆"
+            "value" : "轻点以登录"
           }
         }
       }
@@ -4129,7 +4130,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Play in Audio"
+            "value" : "Play as Audio"
           }
         },
         "zh-Hans" : {
@@ -4209,7 +4210,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Start from %@"
+            "value" : "Started at %@"
           }
         }
       }
@@ -4229,7 +4230,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Disable the 'screen time' feature."
+            "value" : "Disable Screen Time"
           }
         }
       }
